--- a/css/main.css
+++ b/css/main.css
@@ -94,12 +94,41 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+body {
 
+}
+header {
+  text-align: center;
+  background-color: #cacaca;
+  padding: 2em 0 5em 0;
+}
 
+.logo1 .imglogo1resp {
+  max-height:350px;
+  margin: 0 auto 0 auto;
+}
 
+.socialiconsH > *{
+  display: block;
+  float: left;
+  list-style: none;
+}
 
+.name{
+  color:white;
+  font-size: 70pt;
+  padding: auto;
 
+}
+.si1 > * {
+  float: left;
+  padding: 0 0 0 40pt;
+}
 
+.si2 > * {
+  float: left;
+  padding: 0 0 0 40pt;
+}
 
 
 
