--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,7 @@ list-style: none;
 
 }
 
+/*CSS BELOW IS PART PLACEHOLDER*/
 /*review below code for spacing!*/
 .bio li {
   background-color: #1761AE;
