--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,7 @@ textarea {
    Author's custom styles
    ========================================================================== */
 body {
-
+  cursor: default;
 }
 
 
@@ -110,6 +110,16 @@ body {
   max-height:350pt;
   margin: 0 auto 0 auto;
 }
+
+.logo1 .imglogo1resp:hover {
+  cursor: pointer;
+  -webkit-animation:spin 8s linear infinite;
+    -moz-animation:spin 8s linear infinite;
+    animation:spin 8s linear infinite;
+}
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
 
 .socialiconsH{
 display: inline-block;
@@ -175,6 +185,8 @@ padding: 0 1em 1em 1em;
 
 .scrollup:hover {
   font-weight: bolder;
+  border: 2px solid red;
+  color: red;
 }
 
 
