--- a/css/main.css
+++ b/css/main.css
@@ -94,25 +94,28 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-body {
+body { /*review margin, float and the `!important;` cmmnd*/
   cursor: default;
+  max-width: 100%;
+  margin: 0 auto !important;
+  float: none !important;
 }
-
 
 .blog {
   text-align: center;
   background-color: #cacaca;
   width: 100%;
-  padding: 0 0 0 0;
 }
 
+/*LOGO*/
 .logo1 .imglogo1resp {
   max-height:350pt;
   margin: 0 auto 0 auto;
 }
 
+/*Do Not Completley grock!*/
 .logo1 .imglogo1resp:hover {
-  cursor: pointer;
+  cursor: crosshair;
   -webkit-animation:spin 8s linear infinite;
     -moz-animation:spin 8s linear infinite;
     animation:spin 8s linear infinite;
@@ -123,7 +126,8 @@ body {
 
 .socialiconsH{
 display: inline-block;
-padding-top: 20pt;
+margin: 30pt auto 15pt auto;
+
 }
 
 .sizE img{
@@ -146,6 +150,24 @@ padding: 0 1em 1em 1em;
   border-top: none;
   cursor: pointer;
 }
+/*shaker*/
+
+@-webkit-keyframes thumb {
+	0% { -webkit-transform: scale(1); }
+	50% { -webkit-transform: scale(0.9); }
+	100% { -webkit-transform: scale(1); }
+}
+
+.si1 img:hover
+{
+	-webkit-animation-name: thumb;
+	-webkit-animation-duration: 200ms;
+	-webkit-transform-origin:50% 50%;
+	-webkit-animation-iteration-count: 2;
+	-webkit-animation-timing-function: linear;
+}
+/*end shaker*/
+
 .name{
   color:white;
   font-size: 70pt;
@@ -155,11 +177,16 @@ padding: 0 1em 1em 1em;
 
 /*CSS BELOW IS PART PLACEHOLDER*/
 /*review below code for spacing!*/
-.bio li {
+.bio {
   background-color: #464648;
+
+}
+/*Best practice??*/
+ul {
+  margin:0;
+}
+.bio li{
   list-style: none;
-  margin-left: -20em;
-  min-height: 200px;
 }
 
 .bio img{
@@ -167,20 +194,27 @@ padding: 0 1em 1em 1em;
   height: 150px;
 }
 
-.codemonkey li{
+.codemonkey {
   background-color: #1761AE;
+  clear: both;
+}
+.codemonkey li{
   list-style: none;
-  margin-left: -20em;
   min-height: 200px;
+
 }
 .scrollup {
   position: fixed;
   text-decoration: none;
+  text-align: center;
   color: #cacaca;
   margin-top: 5em;
-  margin-left: 40em;
+  margin-left: 15em;
   border: 1px solid #cacaca;
   border-radius: 50%;
+  width: .87em;
+  height: .87em;
+  z-index: 10000;
 }
 
 .scrollup:hover {
