--- a/css/main.css
+++ b/css/main.css
@@ -77,22 +77,9 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-body {
-  /*review margin, float and the `!important;` cmmnd*/
-  cursor: default;
-  max-width: 100%;
-  margin: 0 auto !important;
-  float: none !important; }
-
-.blog {
-  text-align: center;
-  background-color: #cacaca;
-  width: 100%; }
-
 /*LOGO*/
 .logo1 .imglogo1resp {
-  max-height: 350pt;
-  margin: 0 auto 0 auto; }
+  max-height: 350pt; }
 
 /*Do Not Completley grock!*/
 .logo1 .imglogo1resp:hover {
@@ -115,55 +102,27 @@ body {
     transform: rotate(360deg); } }
 
 .socialiconsH {
-  display: inline-block;
-  margin: 30pt auto 15pt auto; }
-
-.sizE img {
-  width: 22pt;
-  height: 22pt; }
-
-.si1 li {
-  float: left;
-  list-style: none;
-  padding: 0 1em 1em 1em; }
-
-.si1 a {
-  border-top: 2pt solid #1761AE;
-  padding-top: 1em; }
-
-.si1 a:hover {
-  border-top: none;
-  cursor: pointer; }
+  display: inline-block; }
+  .socialiconsH .sizE img {
+    width: 22pt;
+    height: 22pt; }
+  .socialiconsH .si1 li {
+    float: left;
+    list-style: none; }
+  .socialiconsH .si1 a {
+    border-top: 2pt solid #1761AE; }
+  .socialiconsH .si1 a:hover {
+    border-top: none;
+    cursor: pointer; }
 
 .name {
   color: white;
-  font-size: 70pt;
-  margin: 0;
-  line-height: 1pt; }
+  font-size: 70pt; }
 
 /*CSS BELOW IS PART PLACEHOLDER*/
 /*review below code for spacing!*/
 .bio {
   background-color: #464648; }
-
-/*Best practice??*/
-ul {
-  margin: 0; }
-
-.bio li {
-  list-style: none; }
-
-.bio img {
-  width: 150px;
-  height: 150px; }
-
-.codemonkey {
-  background-color: #1761AE;
-  clear: both; }
-
-.codemonkey li {
-  list-style: none;
-  min-height: 200px; }
 
 .scrollup {
   position: fixed;
@@ -182,6 +141,29 @@ ul {
   font-weight: bolder;
   border: 2px solid red;
   color: red; }
+
+.container {
+  width: 100%;
+  max-width: 90%;
+  margin: 0 auto; }
+  .container .grid {
+    max-width: 100%;
+    margin: 0 auto;
+    background-color: lightgrey;
+    outline: 2px solid red; }
+    .container .grid .unit-span-1, .container .grid .unit-span-2, .container .grid .unit-span-4, .container .grid .offset-2 {
+      background-color: grey;
+      outline: 2px solid blue;
+      float: left;
+      width: 12.5%;
+      padding-right: 2em;
+      box-sizing: border-box; }
+    .container .grid .unit-span-2 {
+      width: 25%; }
+    .container .grid .unit-span-4 {
+      width: 50%; }
+    .container .grid .offset-2 {
+      margin-left: 25%; }
 
 /* ==========================================================================
    Helper classes
