--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,20 +1,9 @@
-body { /*review margin, float and the `!important;` cmmnd*/
-  cursor: default;
-  max-width: 100%;
-  margin: 0 auto !important;
-  float: none !important;
-}
 
-.blog {
-  text-align: center;
-  background-color: #cacaca;
-  width: 100%;
-}
+
 
 /*LOGO*/
 .logo1 .imglogo1resp {
   max-height:350pt;
-  margin: 0 auto 0 auto;
 }
 
 /*Do Not Completley grock!*/
@@ -30,9 +19,7 @@ body { /*review margin, float and the `!important;` cmmnd*/
 
 .socialiconsH{
 display: inline-block;
-margin: 30pt auto 15pt auto;
 
-}
 
 .sizE img{
   width: 22pt;
@@ -42,53 +29,29 @@ margin: 30pt auto 15pt auto;
 .si1 li {
 float: left;
 list-style: none;
-padding: 0 1em 1em 1em;
+// padding: 1em 1em 1em 1em;
 }
 
 
 .si1 a{
   border-top: 2pt solid #1761AE;
-  padding-top: 1em;
+  // padding-top: 1em;
 }
 .si1 a:hover{
   border-top: none;
   cursor: pointer;
 }
-
+}
 
 .name{
   color:white;
   font-size: 70pt;
-  margin: 0;
-  line-height: 1pt;
 }
 
 /*CSS BELOW IS PART PLACEHOLDER*/
 /*review below code for spacing!*/
 .bio {
   background-color: #464648;
-
-}
-/*Best practice??*/
-ul {
-  margin:0;
-}
-.bio li{
-  list-style: none;
-}
-
-.bio img{
-  width: 150px;
-  height: 150px;
-}
-
-.codemonkey {
-  background-color: #1761AE;
-  clear: both;
-}
-.codemonkey li{
-  list-style: none;
-  min-height: 200px;
 
 }
 .scrollup {
