--- a/css/main.css
+++ b/css/main.css
@@ -79,27 +79,12 @@ textarea {
    ========================================================================== */
 /*LOGO*/
 .logo1 .imglogo1resp {
-  max-height: 350pt; }
+  max-height: 350pt;
+  padding-left: 30%;
+  padding-right: 30%; }
 
-/*Do Not Completley grock!*/
-.logo1 .imglogo1resp:hover {
-  cursor: crosshair;
-  -webkit-animation: spin 8s linear infinite;
-  -moz-animation: spin 8s linear infinite;
-  animation: spin 8s linear infinite; }
-
-@-moz-keyframes spin {
-  100% {
-    -moz-transform: rotate(360deg); } }
-
-@-webkit-keyframes spin {
-  100% {
-    -webkit-transform: rotate(360deg); } }
-
-@keyframes spin {
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg); } }
+.color1 {
+  background-color: #cacaca; }
 
 .socialiconsH {
   display: inline-block; }
@@ -108,7 +93,10 @@ textarea {
     height: 22pt; }
   .socialiconsH .si1 li {
     float: left;
-    list-style: none; }
+    list-style: none;
+    padding: 0em 1em 1em 1em; }
+  .socialiconsH .si1 img {
+    padding-top: 2ex; }
   .socialiconsH .si1 a {
     border-top: 2pt solid #1761AE; }
   .socialiconsH .si1 a:hover {
@@ -117,7 +105,11 @@ textarea {
 
 .name {
   color: white;
-  font-size: 70pt; }
+  font-size: 60pt;
+  text-align: center;
+  margin: auto;
+  width: 0 1em 0 1em;
+  padding: 0 3em 0 3em; }
 
 /*CSS BELOW IS PART PLACEHOLDER*/
 /*review below code for spacing!*/
@@ -149,10 +141,8 @@ textarea {
   .container .grid {
     max-width: 100%;
     margin: 0 auto;
-    background-color: lightgrey;
     outline: 2px solid red; }
     .container .grid .unit-span-1, .container .grid .unit-span-2, .container .grid .unit-span-4, .container .grid .offset-2 {
-      background-color: grey;
       outline: 2px solid blue;
       float: left;
       width: 12.5%;
