--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -43,10 +43,7 @@ padding: 0em 1em 1em 1em;
 .name{
   color:white;
   font-size: 60pt;
-  text-align: center;
-  margin: auto;
-  width: 0 1em 0 1em;
-  padding: 0 3em 0 3em;
+  vertical-align: baseline;
   }
 
 /*CSS BELOW IS PART PLACEHOLDER*/
