--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,5 +1,6 @@
 body {
   background-color: black;
+  color: white;
 }
 
 
@@ -69,9 +70,12 @@ img{
 /*review below code for spacing!*/
 .bio {
   background-color: #464648;
+    display: inline-block;
+    float: left;
 
   li{
     list-style: none;
+
   }
 
   img{
@@ -80,13 +84,17 @@ img{
   }
 
 }
+
+.codemonkey{
+  background-color: #1761AE;
+}
 .scrollup {
   position: fixed;
   text-decoration: none;
   text-align: center;
   color: #cacaca;
-  margin-top: 5em;
-  margin-left: 15em;
+  // margin-top: 5em;
+  // margin-left: 15em;
   border: 1px solid #cacaca;
   border-radius: 50%;
   width: .87em;
