--- a/css/main.css
+++ b/css/main.css
@@ -123,14 +123,15 @@ body {
 /*CSS BELOW IS PART PLACEHOLDER*/
 /*review below code for spacing!*/
 .bio {
-  background-color: #464648;
-  display: inline-block;
-  float: left; }
-  .bio li {
-    list-style: none; }
-  .bio img {
-    height: 10em;
-    width: 10em; }
+  background-color: #464648; }
+  .bio .about {
+    margin: 0 auto;
+    float: left; }
+    .bio .about li {
+      list-style: none; }
+    .bio .about img {
+      height: 10em;
+      width: 10em; }
 
 .codemonkey {
   background-color: #1761AE; }
@@ -140,16 +141,17 @@ body {
   text-decoration: none;
   text-align: center;
   color: #cacaca;
+  margin-top: 8em;
+  margin-left: 1em;
   border: 1px solid #cacaca;
   border-radius: 50%;
   width: .87em;
   height: .87em;
   z-index: 10000; }
-
-.scrollup:hover {
-  font-weight: bolder;
-  border: 2px solid red;
-  color: red; }
+  .scrollup:hover {
+    font-weight: bolder;
+    border: 2px solid red;
+    color: red; }
 
 .container {
   width: 100%;
