--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -70,19 +70,21 @@ img{
 /*review below code for spacing!*/
 .bio {
   background-color: #464648;
-    display: inline-block;
+
+  .about{
+    margin: 0 auto;
     float: left;
 
   li{
-    list-style: none;
-
+  list-style: none;
   }
 
   img{
     height: 10em;
     width: 10em;
-  }
+    }
 
+  }
 }
 
 .codemonkey{
@@ -93,17 +95,17 @@ img{
   text-decoration: none;
   text-align: center;
   color: #cacaca;
-  // margin-top: 5em;
-  // margin-left: 15em;
+  margin-top: 8em;
+  margin-left: 1em;
   border: 1px solid #cacaca;
   border-radius: 50%;
   width: .87em;
   height: .87em;
   z-index: 10000;
-}
 
-.scrollup:hover {
+&:hover {
   font-weight: bolder;
   border: 2px solid red;
   color: red;
+}
 }
