about incorrectly finished

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -89,6 +89,12 @@ img{
 
 .codemonkey{
   background-color: #1761AE;
+  
+
+  li{
+    list-style: none;
+    float: left;
+  }
 }
 .scrollup {
   position: fixed;
