--- a/css/main.css
+++ b/css/main.css
@@ -135,6 +135,9 @@ body {
 
 .codemonkey {
   background-color: #1761AE; }
+  .codemonkey li {
+    list-style: none;
+    float: left; }
 
 .scrollup {
   position: fixed;
