--- a/src/_includes/sidebar.html
+++ b/src/_includes/sidebar.html
@@ -25,14 +25,14 @@
       {% endif %}
     {% endfor %}
 
-    <a class="sidebar-nav-item" href="https://github.com/sondr3/generator-jekyllized">Jekyllized on Github</a>
-    <a class="sidebar-nav-item" href="https://github.com/poole">Poole on Github</a>
+    <a class="sidebar-nav-item" href="https://github.com/pope410211">GitHub</a>
+    <a class="sidebar-nav-item" href="https://linkedin.com/in/pope410211">LinkedIN</a>
     <span class="sidebar-nav-item">Run by <a href="https://twitter.com/{{ site.author.twitter}}">@{{ site.author.name }}<a/></span>
   </nav>
 
   <div class="sidebar-item">
     <p>
-      &copy; {{ site.time | date: '%Y' }}. All rights reserved.
+      &copy; {{ site.time | date: '%Y' }}. All rights reserved. Nicholas Pope
     </p>
   </div>
 </div>
