--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="site-footer">
+<!-- <footer class="site-footer">
 
   <div class="wrapper">
 
@@ -46,10 +46,10 @@
       </div>
 
       <div class="footer-col  footer-col-3">
-        <p class="text">{{ site.description }}</p>
+        <p class="text">{{ site.phone }}</p>
       </div>
     </div>
 
   </div>
 
-</footer>
+</footer> -->
