updating and adding logo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,13 @@
 <header class="site-header">
 
-  <div class="wrapper">
-
-
-    <nav class="mobile-nav">
-
-
-    </nav>
-
-
-  </div>
+    <ul class="nav">
+        <li><a class="btn">&#9776;</a>
+            <ul class="menu">
+                <li><a href="/">Home</a></li>
+                <li><a href="/portfolio">Portfolio</a></li>
+                <li><a href="/contact">Contact</a></li>
+            </ul>
+        </li>
+    </ul>
 
 </header>
