nav bar is complete

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,21 @@
 <header class="site-header">
-
+    <div class="logo">
+      <ul>
+        <li><a href="/"><img src="assets/images/nick-logo.png"/></a></li>
+      <li id="name"><p> <big> Nicholas Pope </big></p></li>
+    </ul>
+    </div>
     <ul class="nav">
+
         <li><a class="btn">&#9776;</a>
-            <ul class="menu">
-                <li><a href="/">Home</a></li>
+            <ul id="hamburger-menu" class="menu">
+                <li><a href="/">About</a></li>
+                <li><a href="/">Contact</a></li>
                 <li><a href="/portfolio">Portfolio</a></li>
-                <li><a href="/contact">Contact</a></li>
+                <li><a href="/contact">Resume</a></li>
             </ul>
         </li>
     </ul>
+
 
 </header>
