nav bar complete with mobile view active

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,8 @@
       <li id="name"><p> <big> Nicholas Pope </big></p></li>
     </ul>
     </div>
+    <div id="tagline"><p> <small><i>The Most Hospitable Developer</i></small></p></div>
+
     <ul class="nav">
 
         <li><a class="btn">&#9776;</a>
