--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,5 +1,10 @@
-body{
+body {
 background-color: black;
 color: white;
 font-family: "Source Sans Pro";
+
+#splash {
+  margin: 2em 4em;
+}
+
 }//end body
