updating with fake image

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -4,7 +4,8 @@ color: white;
 font-family: "Source Sans Pro";
 
 #splash {
-  margin: 2em 4em;
+  content: url("http://lorempixel.com/output/nightlife-q-g-1200-300-1.jpg");
+  margin: 2em 5em;
 }
 
 }//end body
