upping the footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,15 @@
 <footer class="site-footer">
+<section class="social-icons">
+  <ul class="list-icons">
+    <li class="icons"><a>LinkedIN</a></li>
+    <li class="icons"><a>GITHUB</a></li>
+    <li class="icons"><a>Twitter</a></li>
+    <li class="icons"><a>EMAIL</a></li>
+  </ul>
+</section>
+<div class="copy">
+<p>&copy;2015 Nicholas Pope. All Rights Reserved</p>
 
-
+</div>
 
 </footer>
