--- a/_sass/_header-footer.scss
+++ b/_sass/_header-footer.scss
@@ -73,7 +73,9 @@ li {
 
     }
   }
-}
+} // end desktop view
+
+// mobile view
 @media (max-width: 30em) {
 
   .logo {
@@ -126,3 +128,35 @@ li {
 
 
 }//end site-header
+
+
+//Start site footer-col
+ .site-footer {
+color: #3B3C3E;
+
+  .social-icons {
+
+
+
+    .list-icons {
+      margin: 0 auto;
+
+      li{
+        position: relative;
+        float: left;
+        list-style: none;
+        margin: 1em 0 .5em 1em;
+      }
+    }
+  }
+
+  .copy {
+    // margin: 1em 0 0 0;
+    text-align: center;
+    position: relative;
+    clear: both;
+
+  }
+
+
+ }//end site-footer
