footer nearly done need to add icons - one issue with logo in page change

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <footer class="site-footer">
 <section class="social-icons">
   <ul class="list-icons">
-    <li class="icons"><a>LinkedIN</a></li>
-    <li class="icons"><a>GITHUB</a></li>
-    <li class="icons"><a>Twitter</a></li>
-    <li class="icons"><a>EMAIL</a></li>
+    <li class="icons"><a href="https://www.linkedin.com/in/pope410211">LinkedIn</a></li>
+    <li class="icons"><a href="https://www.github.com/pope410211">GITHUB</a></li>
+    <li class="icons"><a href="https://twitter.com/pope410211">Twitter</a></li>
+    <li class="icons"><a href="mailto:pope410211@gmail.com?subject=Hey, There!">EMAIL</a></li>
   </ul>
 </section>
 <div class="copy">
