--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,19 +2,20 @@
     <div class="logo">
       <ul>
         <li><a href="/"><img src="assets/images/nick-logo.png"/></a></li>
-      <li id="name"><p> <big> Nicholas Pope </big></p></li>
+      <li id="name"><p><big>nicholas pope</big></p></li>
     </ul>
     </div>
-    <div id="tagline"><p> <small><i>The Most Hospitable Developer</i></small></p></div>
+    <div id="tagline"><p> <small><i>the most hospitable developer</i></small></p></div>
 
     <ul class="nav">
 
         <li><a class="btn">&#9776;</a>
             <ul id="hamburger-menu" class="menu">
-                <li><a href="/">About</a></li>
-                <li><a href="/">Contact</a></li>
-                <li><a href="/portfolio">Portfolio</a></li>
-                <li><a href="/contact">Resume</a></li>
+                <li><a href="/">home</a></li>
+                <li><a href="/about">about</a></li>
+                <li><a href="/">contact</a></li>
+                <li><a href="/portfolio">portfolio</a></li>
+                <li><a href="/contact">resume</a></li>
             </ul>
         </li>
     </ul>
