--- a/_sass/_header-footer.scss
+++ b/_sass/_header-footer.scss
@@ -133,19 +133,28 @@ li {
 //Start site footer-col
  .site-footer {
 color: #3B3C3E;
+font-size: .8em;
 
   .social-icons {
-
+  display: table;
+  margin: 0 auto;
+  padding: 0 2.5em 0 0em;
 
 
     .list-icons {
-      margin: 0 auto;
 
-      li{
+
+      li {
         position: relative;
         float: left;
         list-style: none;
-        margin: 1em 0 .5em 1em;
+
+
+        a {
+          padding: 1em 0em .5em .5em;
+          text-decoration: none;
+          color: #3B3C3E;
+        }
       }
     }
   }
