added final icons

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <footer class="site-footer">
 <section class="social-icons">
   <ul class="list-icons">
-    <li class="icons"><a href="https://www.linkedin.com/in/pope410211">LinkedIn</a></li>
-    <li class="icons"><a href="https://www.github.com/pope410211">GITHUB</a></li>
-    <li class="icons"><a href="https://twitter.com/pope410211">Twitter</a></li>
-    <li class="icons"><a href="mailto:pope410211@gmail.com?subject=Hey, There!">EMAIL</a></li>
+    <li class="icons"><a href="https://www.linkedin.com/in/pope410211"><img src="assets/images/icons/"/></a></li>
+    <li class="icons"><a href="https://www.github.com/pope410211"><img src="assets/images/icons/icon-3.png"/></a></li>
+    <li class="icons"><a href="https://twitter.com/pope410211"><img src="assets/images/icons/icon-2.png"/></a></li>
+    <li class="icons"><a href="mailto:pope410211@gmail.com?subject=Hey, There!"><img src="assets/images/icons/"/></a></li>
   </ul>
 </section>
 <div class="copy">
