--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,11 +7,9 @@
 
     {% include header.html %}
 
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
+    <section class="content">
+      {{ content }}
+    </section>
 
     {% include footer.html %}
 
