footer complete - image problem fixed

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
     <div class="logo">
       <ul>
-        <li><a href="/"><img src="assets/images/nick-logo.png"/></a></li>
+        <li><a href="/"><img src="/assets/images/nick-logo.png"/></a></li>
       <li id="name"><p><big>nicholas pope</big></p></li>
     </ul>
     </div>
