about page done, downloadable pdf availble

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -35,6 +35,18 @@ img {
   max-width: 80%;
 }
 
+.resume {
+  width: 15em;
+  height: 10em;
+
+  img {
+  max-width: 100%;
+  height: auto;
+
+
+}
+}
+
   }// end about page
 } // end content
 
