--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
             <ul id="hamburger-menu" class="menu">
                 <li><a href="/">home</a></li>
                 <li><a href="/about">about</a></li>
-                <li><a href="/">contact</a></li>
+                <li><a href="/contact">contact</a></li>
                 <li><a href="/portfolio">portfolio</a></li>
                 <li><a href="/contact">resume</a></li>
             </ul>
