--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -5,13 +5,16 @@ font-family: "Source Sans Pro";
 min-height: 100vh;
 
 #splash {
-  content: url("http://lorempixel.com/output/nightlife-q-g-1200-300-1.jpg");
+  content: url("http://placehold.it/1200x300");
   margin: 2em 4.3em;
 }
+
+
 
 .content {
   clear: both;
   display: block;
+
 
 
 .about {
@@ -48,6 +51,51 @@ img {
 }
 
   }// end about page
+
+
+  .recent-projects {
+    text-align: center;
+
+    #list-title {
+      font-size: 1.5em;
+      text-decoration: underline;
+    }
+    ul {
+      list-style: none;
+      vertical-align: bottom;
+
+      .sites-img {
+        display: inline-block;
+        padding: 1em 5em 1em 5em;
+        // vertical-align: top;
+
+        label {
+          font-size: 1em;
+        }
+        div {
+          margin-top: 2em;
+          display: block;
+          // margin: 0 auto;
+          margin-bottom: 10em;
+
+          // text-align: justify;
+          p {
+            position: absolute;
+            height: 10em;
+            width: 10em;
+
+          }
+
+          img {
+          height: 10em;
+          width: 10em;
+        }
+      }
+
+      }
+    }
+  }
+  //end recent-projects
 } // end content
 
 }//end body
