having issue with media query

--- a/css/main.scss
+++ b/css/main.scss
@@ -18,5 +18,6 @@ $mobile:          30em;
 @import
         "base",
         // "layout",
-        "header-footer"
+        "header-footer",
+        "contact"
 ;
