declared global - still issue with media

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -28,7 +28,7 @@ img {
   height: 10em;
   width: 10em;
   box-sizing: border-box;
-  border: .15em solid #3B3C3E;
+  border: .15em solid $grey;
   border-radius: 10em;
     }
 }
