--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -2,6 +2,8 @@
   margin: 0 auto;
   max-width: 80%;
   padding: 2em;
+  text-align: center;
+  color: $grey;
 
 
 .contact-me {
@@ -26,7 +28,7 @@ max-width: 100%;
 
   color: #3A3A3C;
   font-size: 1.2em;
-  border-right: .3em solid #3B3C3E;
+  border-right: .3em solid $grey;
 
 
 
