have contact page and resume page

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -94,6 +94,21 @@ img {
     }
   }
   //end recent-projects
+
+  .resume-p {
+    width: 80%;
+    margin: 0 auto;
+
+
+    img {
+    max-width: 100%;
+    height: auto;
+    margin-top:2em;
+    margin-bottom: 2em;
+
+  }
+  }
+
 } // end content
 
 }//end body
