--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -8,6 +8,7 @@
 
 .contact-me {
 max-width: 100%;
+
 #contact-divs {
 
   list-style: none;
@@ -28,7 +29,7 @@ max-width: 100%;
 
   color: #3A3A3C;
   font-size: 1.2em;
-  border-right: .3em solid $grey;
+
 
 
 
@@ -36,19 +37,22 @@ max-width: 100%;
     list-style: none;
     text-align: right;
     padding-right: 3em;
+
+
   }
 
 
 }//end personal
 
 #social-link{
-
+border-left: .3em solid $grey;
 
 
 .list-icons {
 
 display: inline-block;
 list-style: none;
+margin-right: 3em;
 
     a {
       padding: 1em 0em .5em .5em;
@@ -61,13 +65,40 @@ list-style: none;
         }
       }// end social-link
     }//end contact-divs
+
+
+
   } // end contact-me
 
 
-  @media screen and (max-width: $mobile) {
-    #personal {
-      color: red;
+  @media (max-width: $mobile) {
+
+    .contact-me {
+
+      #contact-divs{
+      margin: 0;
+      padding: 0;
     }
+
+      #personal{
+        margin-bottom: 1em;
+        padding: 0;
+
+        ul li{
+        text-align: center;
+        small{
+          display: none;
+        }
+      }
+    }
+      #social-link {
+        border: none;
+        margin-bottom: 1em;
+
+      }
+
+    } // end mobile contact-me
+
 
 
 
