started layout for portfolio page and have a 404 page...not sure if it works though

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -82,6 +82,15 @@ img {
             height: 10em;
             width: 10em;
 
+            a {
+              text-decoration: none;
+              color: $grey;
+
+              &:hover{
+              color: #fff;  
+              }
+            }
+
           }
 
           img {
