--- a/css/main.scss
+++ b/css/main.scss
@@ -20,5 +20,6 @@ $grey: #3B3C3E;
         "base",
         // "layout",
         "header-footer",
-        "contact"
+        "contact",
+        "port"
 ;
