not all unicode works in android

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
 
     <ul class="nav">
 
-        <li><a class="btn">&#9776;</a>
+        <li><a class="btn"></a>
             <ul id="hamburger-menu" class="menu">
                 <li><a href="/">home</a></li>
                 <li><a href="/about">about</a></li>
