fixed img issue

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -6,7 +6,9 @@ min-height: 100vh;
 
 #splash {
   content: url("/assets/images/MarioBanners-01.png");
-  margin: 2em 4.3em;
+  display: block;
+  margin: 0 auto;
+
 
 }
 
