mobile img aligned

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -17,6 +17,8 @@ min-height: 100vh;
     content: url("/assets/images/MarioBanners-02.png");
     max-width: 20em;
     max-height: 30em;
+    display: block;
+    margin: 0 auto;
   }
 }
 
