adjusting img position, ran build

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,6 +8,7 @@ min-height: 100vh;
   content: url("/assets/images/MarioBanners-01.png");
   display: block;
   margin: 0 auto;
+  padding-top: 1em;
 
 
 }
