--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,9 @@
 
     {% include footer.html %}
 
-
+<script src="/bower_components/jquery/dist/jquery.min.js"> </script>
 <script src="/assets/scripts/twitter.js"> </script>
+
   </body>
 
 </html>
