--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -105,7 +105,7 @@ img {
 
 .resume {
   width: 15em;
-  height: 10em;
+  height: 4em;
 
   img {
   max-width: 100%;
@@ -113,6 +113,11 @@ img {
 
 
 }
+}
+
+.twitter {
+  text-align: center;
+  max-width: 100%
 }
 
 
