--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,9 @@
     </section>
 
     {% include footer.html %}
-
-<script src="/bower_components/jquery/dist/jquery.min.js"> </script>
-<script src="/assets/scripts/twitter.js"> </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+<script src="/../bower_components/jquery/dist/jquery.min.js"> </script>
+<script src="/../assets/scripts/twitter.js"> </script>
 
   </body>
 
