--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,8 @@
 
     {% include footer.html %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-<script src="/../bower_components/jquery/dist/jquery.min.js"> </script>
-<script src="/../assets/scripts/twitter.js"> </script>
+<script src="bower_components/jquery/dist/jquery.min.js"> </script>
+<script src="assets/scripts/twitter.js"> </script>
 
   </body>
 
