--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
                 <li><a href="/about">about</a></li>
                 <li><a href="/contact">contact</a></li>
                 <li><a href="/portfolio">portfolio</a></li>
-                <li><a href="/resume">resume</a></li>
+                <li><a href="/blog">blog</a></li>
             </ul>
         </li>
     </ul>
