--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,7 +1,7 @@
 body {
 background-color: black;
 color: white;
-font-family: "Source Sans Pro";
+font-family: $fontfam;
 min-height: 100vh;
 
 #splash {
